2002-09-17  Werner Koch  <wk@gnupg.org>

	* random.c: Replaced mutex.h by the new ath.h.  Changed all calls.

2002-09-16  Werner Koch  <wk@gnupg.org>

	* arcfour.c (do_encrypt_stream): Use register modifier and modulo.
	According to Nikos Mavroyanopoulos this increases perfromace on
	i386 system noticable.  And I always tought gcc is clever enough.
	* md5.c (transform): Use register modifier.
	* rmd160.c (transform): Ditto.
	* sha1.c (transform): Ditto.  We hope that there are 6 free registers.
	* random.c (gcry_randomize): Rewrote to avoid malloc calls.

	* rndlinux.c (gather_random): Replaced remaining fprintfs by log_*.
	* arcfour.c (do_arcfour_setkey): Ditto.
	* twofish.c (do_twofish_setkey): Ditto.
	* rndegd.c (gather_random): Ditto.
	* rijndael.c (do_setkey): Ditto.
	* random.c (_gcry_random_dump_stats): Ditto. 
	* primegen.c (_gcry_generate_elg_prime): Ditto.
	* des.c (_gcry_des_get_info): Ditto.
	* cast5.c (do_cast_setkey): Ditto.
	* blowfish.c (do_bf_setkey): Ditto.

2002-08-26  Werner Koch  <wk@gnupg.org>

	* des.c (weak_keys): Fixed one entry in the table and compared
	all entries against the literature.
	(selftest): Checksum the weak key table.

2002-08-21  Werner Koch  <wk@gnupg.org>

	* pubkey.c: Enable keygrip calculation for "openpgp-rsa".

2002-08-17  Werner Koch  <wk@gnupg.org>

	* cipher.c (setup_cipher_table): Don't overwrite the DES entry
	with the entry for DUMMY.

2002-08-14  Werner Koch  <wk@gnupg.org>

	* des.c (do_des_setkey,do_des_encrypt, do_des_decrypt): New.
	(_gcry_des_get_info): Support plain old DES.
	* cipher.c (setup_cipher_table): Put DES into the table.

2002-07-25  Werner Koch  <wk@gnupg.org>

	* rndunix.c (_gcry_rndunix_constructor): Prefixed with _gcry_.
	Noted by Stephan Austermuehle.

2002-07-08  Timo Schulz  <ts@winpt.org>

	* rndw32.c: Replaced the m_ memory functions with the real 
	gcry_ functions. Renamed all g10_ prefixed functions to log_.
	
2002-06-12  Werner Koch  <wk@gnupg.org>
