@@ -1,3 +1,9 @@
+2002-10-10  Timo Schulz  <ts@winpt.org>
+
+	* md.c (gcry_md_open): Check that algo is available and only
+	valid flags values are used.
+	(gcry_md_get_algo): Add error handling.
+	
 2002-09-17  Werner Koch  <wk@gnupg.org>
 
 	* random.c: Replaced mutex.h by the new ath.h.  Changed all calls.
